<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    tools:context=".MainMenu">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/buttonClicked"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="64dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSinglePlayer"
            style="@style/button_menu"
            android:onClick="onClick"
            android:text="@string/singleplayer" />

        <Button
            android:id="@+id/btnMultiplayer"
            style="@style/button_menu"
            android:onClick="onClick"
            android:text="@string/multiplayer" />

        <Button
            android:id="@+id/btnOption"
            style="@style/button_menu"
            android:onClick="onClick"
            android:text="@string/option" />

        <Button
            android:id="@+id/btnAbout"
            style="@style/button_menu"
            android:onClick="onClick"
            android:text="@string/title_activity_about" />

        <Button
            android:id="@+id/btnExit"
            style="@style/button_menu"
            android:onClick="onClick"
            android:text="@string/exit" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
