<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    tools:context=".ActivityGame">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="64dp"
        android:background="@color/background"
        android:baselineAligned="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="2dp">

            <TextView
                android:id="@+id/txtPlayer1"
                style="@style/text_game"
                android:background="@color/player1"
                android:text="@string/player1" />

            <TextView
                android:id="@+id/txtPlayer1Point"
                style="@style/text_game"
                android:layout_marginLeft="1dp"
                android:text="@string/player1_point" />

            <TextView
                android:id="@+id/tvVersus"
                style="@style/text_game"
                android:text="@string/versus" />

            <TextView
                android:id="@+id/txtPlayer2Point"
                style="@style/text_game"
                android:layout_marginRight="1dp"
                android:text="@string/player2_point" />

            <TextView
                android:id="@+id/txtPlayer2"
                style="@style/text_game"
                android:background="@color/player2Score"
                android:text="@string/player2" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="#ffffff"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnA00"
                    style="@style/button_game"
                    android:layout_marginRight="2dp"
                    android:onClick="onClick"
                    android:text="" />

                <Button
                    android:id="@+id/btnA01"
                    style="@style/button_game"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:onClick="onClick"
                    android:text="" />

                <Button
                    android:id="@+id/btnA02"
                    style="@style/button_game"
                    android:layout_marginLeft="2dp"
                    android:onClick="onClick"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnA10"
                    style="@style/button_game"
                    android:layout_marginRight="2dp"
                    android:onClick="onClick"
                    android:text="" />

                <Button
                    android:id="@+id/btnA11"
                    style="@style/button_game"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:onClick="onClick"
                    android:text="" />

                <Button
                    android:id="@+id/btnA12"
                    style="@style/button_game"
                    android:layout_marginLeft="2dp"
                    android:onClick="onClick"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnA20"
                    style="@style/button_game"
                    android:layout_marginRight="2dp"
                    android:onClick="onClick"
                    android:text="" />

                <Button
                    android:id="@+id/btnA21"
                    style="@style/button_game"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:onClick="onClick"
                    android:text="" />

                <Button
                    android:id="@+id/btnA22"
                    style="@style/button_game"
                    android:layout_marginLeft="2dp"
                    android:onClick="onClick"
                    android:text="" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>

